src/test/ui/traits/trait-object-vs-lifetime.stderr
error: lifetime arguments must be declared prior to type arguments
  --> $DIR/trait-object-vs-lifetime.rs:14:29
   |
LL |     let _: S<dyn 'static +, 'static>;
   |                             ^^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:9:23
   |
LL |     let _: S<'static, dyn 'static +>;
   |                       ^^^^^^^^^^^^^

error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/trait-object-vs-lifetime.rs:11:23
   |
LL |     let _: S<'static, 'static>;
   |                       ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/trait-object-vs-lifetime.rs:11:12
   |
LL |     let _: S<'static, 'static>;
   |            ^^^^^^^^^^^^^^^^^^^ expected 1 type argument

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:14:14
   |
LL |     let _: S<dyn 'static +, 'static>;
   |              ^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0107`.
